adding screen to shoe email and add empty screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,11 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
+    // * clear advertising experimentalAnnotation
+    kotlin.sourceSets.all {
+        languageSettings.useExperimentalAnnotation("kotlin.RequiresOptIn")
+    }
 }
 
 dependencies {
