--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,8 +72,8 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
+    implementation 'androidx.activity:activity-compose:1.5.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -110,7 +110,7 @@ dependencies {
     testImplementation "androidx.room:room-testing:$roomVersion"
 
     // * save state
-    implementation "androidx.savedstate:savedstate-ktx:1.1.0"
+    implementation "androidx.savedstate:savedstate-ktx:1.2.0"
 
     // * image compressor
     implementation 'com.github.Shouheng88:compressor:1.6.0'
@@ -123,7 +123,7 @@ dependencies {
     implementation 'com.valentinilk.shimmer:compose-shimmer:1.0.2'
 
     // * navigation compose
-    implementation "androidx.navigation:navigation-compose:2.4.2"
+    implementation "androidx.navigation:navigation-compose:2.5.0"
     implementation 'io.github.raamcosta.compose-destinations:core:1.3.4-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.3.4-beta'
 
@@ -141,4 +141,7 @@ dependencies {
 
     // * web view
     implementation "com.google.accompanist:accompanist-webview:0.24.12-rc"
+
+    // * gson
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
