--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NullSiteAdmin"
-        tools:targetApi="31">
+        android:theme="@style/Theme.MySplash"
+        tools:targetApi="31"
+        >
         <activity
             android:name=".ui.activitys.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.NullSiteAdmin">
+            android:theme="@style/Theme.MySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
