--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,8 +124,10 @@ dependencies {
 
     // * navigation compose
     implementation "androidx.navigation:navigation-compose:2.5.0"
-    implementation 'io.github.raamcosta.compose-destinations:core:1.3.4-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.3.4-beta'
+    implementation "io.github.raamcosta.compose-destinations:animations-core:1.3.4-beta"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.24.13-rc"
+    implementation "com.google.accompanist:accompanist-navigation-material:0.24.13-rc"
 
     // * data store
     implementation("androidx.datastore:datastore-preferences:1.0.0")
