--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,7 @@ dependencies {
 
 
     // * hilt
-    def daggerHiltVersion = '2.38.1'
+    def daggerHiltVersion = '2.42'
     implementation "com.google.dagger:hilt-android:$daggerHiltVersion"
     kapt "com.google.dagger:hilt-compiler:$daggerHiltVersion"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
@@ -124,10 +124,9 @@ dependencies {
 
     // * navigation compose
     implementation "androidx.navigation:navigation-compose:2.5.0"
-    ksp 'io.github.raamcosta.compose-destinations:ksp:1.3.4-beta'
-    implementation "io.github.raamcosta.compose-destinations:animations-core:1.3.4-beta"
-    implementation "com.google.accompanist:accompanist-navigation-animation:0.24.13-rc"
-    implementation "com.google.accompanist:accompanist-navigation-material:0.24.13-rc"
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.12-beta'
+//    implementation 'io.github.raamcosta.compose-destinations:core:1.5.12-beta'
+    implementation "io.github.raamcosta.compose-destinations:animations-core:1.5.12-beta"
 
     // * data store
     implementation("androidx.datastore:datastore-preferences:1.0.0")
