fixed error no deleter notify

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,9 @@
 
         <service
             android:name=".services.imageProfile.UploadImageServices"
-            android:foregroundServiceType="dataSync" />
+            android:foregroundServiceType="dataSync"
+            android:exported="false"
+            />
     </application>
 
 </manifest>
