--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         tools:targetApi="31"
         >
         <activity
+            android:launchMode= "standard"
             android:name=".ui.activitys.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MySplash">
@@ -40,7 +41,7 @@
         </provider>
 
         <service
-            android:name=".services.MyFirebaseMessagingService"
+            android:name=".services.messaging.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
