--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31"
         >
         <activity
-            android:launchMode= "standard"
+            android:launchMode= "singleInstance"
             android:name=".ui.activitys.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MySplash">
