--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,13 @@
         tools:targetApi="31"
         >
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:launchMode= "singleInstance"
             android:name=".ui.activitys.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.MySplash">
+            android:theme="@style/Theme.MySplash"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
