--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
-    id "com.google.devtools.ksp" version "1.6.10-1.0.4"
+    id "com.google.devtools.ksp" version "1.7.0-1.0.6"
     id 'com.google.gms.google-services'
 }
 kotlin {
@@ -59,11 +59,6 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
-
-    // * clear advertising experimentalAnnotation
-    kotlin.sourceSets.all {
-        languageSettings.useExperimentalAnnotation("kotlin.RequiresOptIn")
-    }
 }
 
 dependencies {
@@ -72,9 +67,9 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
-    implementation 'androidx.activity:activity-compose:1.5.0'
-    implementation 'androidx.lifecycle:lifecycle-service:2.5.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -83,7 +78,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
     // * coil
-    implementation("io.coil-kt:coil-compose:2.0.0")
+    implementation("io.coil-kt:coil-compose:2.1.0")
 
     // *lottie compose
     implementation "com.airbnb.android:lottie-compose:5.1.1"
@@ -104,7 +99,7 @@ dependencies {
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$daggerHiltVersion"
 
     // * room
-    def roomVersion="2.4.2"
+    def roomVersion="2.4.3"
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
@@ -117,16 +112,15 @@ dependencies {
     implementation 'com.github.Shouheng88:compressor:1.6.0'
 
     // * splash screen
-    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
+    implementation 'androidx.core:core-splashscreen:1.0.0'
 
 
     // * shimmer effect
-    implementation 'com.valentinilk.shimmer:compose-shimmer:1.0.2'
+    implementation 'com.valentinilk.shimmer:compose-shimmer:1.0.3'
 
     // * navigation compose
-    implementation "androidx.navigation:navigation-compose:2.5.0"
+    implementation "androidx.navigation:navigation-compose:2.5.1"
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.12-beta'
-//    implementation 'io.github.raamcosta.compose-destinations:core:1.5.12-beta'
     implementation "io.github.raamcosta.compose-destinations:animations-core:1.5.12-beta"
 
     // * data store
@@ -142,7 +136,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
 
     // * web view
-    implementation "com.google.accompanist:accompanist-webview:0.24.12-rc"
+    implementation "com.google.accompanist:accompanist-webview:0.25.0"
 
     // * gson
     implementation 'com.google.code.gson:gson:2.8.9'
