--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,9 @@ pluginManagement {
             if (requested.id.id == 'dagger.hilt.android.plugin') {
                 useModule("com.google.dagger:hilt-android-gradle-plugin:2.39.1")
             }
+//            if (requested.id.id == "kotlinx-serialization") {
+//                useModule("org.jetbrains.kotlin:kotlin-serialization:${requested.version}")
+//            }
         }
     }
 
