--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,6 +142,7 @@ dependencies {
 
     // * gson
     implementation 'com.google.code.gson:gson:2.8.9'
-//    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0")
+
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.25.1"
 
 }
