--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
 //    id 'kotlinx-serialization' version '1.4.10'
     id "com.google.devtools.ksp" version "1.7.0-1.0.6"
     id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 kotlin {
     sourceSets {
@@ -136,6 +137,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     // * web view
     implementation "com.google.accompanist:accompanist-webview:0.25.0"
@@ -143,6 +146,7 @@ dependencies {
     // * gson
     implementation 'com.google.code.gson:gson:2.8.9'
 
+    // * swiperefresh
     implementation "com.google.accompanist:accompanist-swiperefresh:0.25.1"
 
 }
