--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,17 @@ buildscript {
     ext {
         compose_version = '1.2.0'
     }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
     id 'com.google.gms.google-services' version '4.3.14' apply false
-
 }
 
 task clean(type: Delete) {
