--- a/app/build.gradle
+++ b/app/build.gradle
@@ -149,4 +149,6 @@ dependencies {
     // * swiperefresh
     implementation "com.google.accompanist:accompanist-swiperefresh:0.25.1"
 
+    implementation "androidx.biometric:biometric:1.1.0"
+
 }
