--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
-//    id 'kotlinx-serialization' version '1.4.10'
+    id 'org.jetbrains.kotlin.plugin.serialization'
     id "com.google.devtools.ksp" version "1.7.0-1.0.6"
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
@@ -67,18 +67,18 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.ui:ui:1.3.3"
+    implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.3"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.3"
 
     // * coil
     implementation("io.coil-kt:coil-compose:2.1.0")
@@ -102,7 +102,7 @@ dependencies {
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$daggerHiltVersion"
 
     // * room
-    def roomVersion="2.4.3"
+    def roomVersion = "2.5.0"
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
@@ -122,7 +122,7 @@ dependencies {
     implementation 'com.valentinilk.shimmer:compose-shimmer:1.0.3'
 
     // * navigation compose
-    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.12-beta'
     implementation "io.github.raamcosta.compose-destinations:animations-core:1.5.12-beta"
 
@@ -135,7 +135,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx'
-    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
@@ -150,5 +150,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-swiperefresh:0.25.1"
 
     implementation "androidx.biometric:biometric:1.1.0"
+
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 
 }
