--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,7 +136,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
@@ -144,14 +144,16 @@ dependencies {
     implementation "com.google.accompanist:accompanist-webview:0.25.0"
 
     // * gson
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
-    // * swiperefresh
+    // * swipe refresh
     implementation "com.google.accompanist:accompanist-swiperefresh:0.25.1"
 
     implementation "androidx.biometric:biometric:1.1.0"
 
 
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
+
+    implementation("com.vanniktech:android-image-cropper:4.3.3")
 
 }
