--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MySplash"
-        tools:targetApi="31"
-        >
+        tools:targetApi="31">
         <activity
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:launchMode= "singleInstance"
             android:name=".ui.activitys.MainActivity"
+            android:configChanges="orientation"
             android:exported="true"
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.MySplash"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
@@ -33,6 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.canhub.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -54,9 +57,8 @@
 
         <service
             android:name=".services.imageProfile.UploadImageServices"
-            android:foregroundServiceType="dataSync"
             android:exported="false"
-            />
+            android:foregroundServiceType="dataSync" />
     </application>
 
 </manifest>
