--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,10 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.activitys.MainActivity"
-            android:configChanges="orientation"
             android:exported="true"
             android:launchMode="singleInstance"
             android:theme="@style/Theme.MySplash"
-            tools:ignore="LockedOrientationActivity">
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
